# pgfem-3d-input-stack

input_lib/: CONTRIBUTORS  LICENSE  Makefile  README  input_parser.cc  read_input.cc  write_input.cc
input_lib/example/: local_makeset.pl  mechanical_initial.json  mechanical_load.json  model_params.in  multiphysics.json  numerical_param.json  thermal_load.json  timesteps.json
input_lib/include/: input_parser.h  read_input.h  structures.h  write_input.h
input_lib/pgfem-3d-input-stack.wiki/: large-json-example.md  normal_in.md
input_lib/verification_tests/const_T_with_constrained_BC/: heat_transfer_initial.json  heat_transfer_load.json  local_makeset.pl  material_mat.json  multiphysics.json  numerical_param.json  timesteps.json
input_lib/verification_tests/thermomechanical/: case_1.t3d  local_makeset.pl  material_mat.json  mechanical_bc.json  mechanical_load.json  thermal_initial.json  timesteps.json
pgfem-3d-input-stack.wiki/: Input-stack-file-guide.md  bc.md  load.md  material_mat.md  multiphysics_in.md  simple-json-example.md  timesteps.md
pgfem-3d-input-stack.wiki.git/: co_props.md  home.md  initial.md  numerical_param.md  periodic.md
preprocessor/: .gitignore  AUTHORS  CONTRIBUTORS  LICENSE  README.md
preprocessor/docs/: Makefile  con3d++_guide.tex
preprocessor/example/cut_block/: cohe_block.out.header  cohe_block.out.periodic  cohe_block.t3d  make_example.sh  reg-test-comm-only.sh  reg-test.sh
preprocessor/example/cut_block/cohe_block_1thread/: cohe_block.out.0  cohe_block.out.1  cohe_block.out.2  cohe_block.out.3  cohe_block.out.4  cohe_block.out.5  cohe_block.out.6  cohe_block.out.7
preprocessor/example/cut_particle/: pack.out.0  pack.out.1  pack.out.header  pack.out.periodic  pack.t3d
preprocessor/example/quad_tet_block/: reg-test.sh
preprocessor/example/quad_tet_block/box_QT_2CPU/: box_QT.out.0  box_QT.out.1
preprocessor/example/quad_tet_block/box_QT_4CPU/: box_QT.out.0  box_QT.out.1  box_QT.out.2  box_QT.out.3  box_QT.out.header
preprocessor/example/quad_tet_block_BC_multithreading/: README.md  reg-test.sh
preprocessor/example/quad_tet_block_BC_multithreading/box_1thread/: box.out.7
preprocessor/example/quad_tet_block_BC_multithreading/box_4thread/: box.out.4  box.out.5  box.out.6
preprocessor/example/quad_tet_block_BC_multithreading/box_8thread/: box.out.0  (+3 more)
preprocessor/example/quad_tet_block_multithreading/: README.md  reg-test.sh
preprocessor/include/: apply_header.h  apply_periodic_bc.h  basis.h  boundary_conditions.h  comm_hints.h  comm_hints_util.h  domain.h  element.h  header.h  initial_conditions.h  material.h  node.h  omp_param.h  options.h  periodic.h  process_input_files.h  renumber_global_nodes.h  t3d_model.h  utils.h  write_pgfem_input.h
preprocessor/src/: Makefile  apply_header.cc  apply_periodic_bc.cc  basis.cc  boundary_conditions.cc  comm_hints.cc  comm_hints_util.cc  compile.sh  domain.cc  element.cc  header.cc  initial_conditions.cc  main.cc  material.cc  node.cc  options.cc  periodic.cc  process_input_files.cc  renumber_global_nodes.cc  write_pgfem_input.cc
t3d-mesh-partitioner/: .gitignore  CONTRIBUTORS  LICENSE  README.md
t3d-mesh-partitioner/contrib/Ckit/: README
t3d-mesh-partitioner/contrib/Ckit/src/: Imakefile  Makefile.in  alistP.c  config.cache  configure  configure.in  expeval.c  gaussP.c  getopts.c  hashP.c  listP.c  mallocP.c  mathP.c  memoryP.c  miscP.c  scanlP.c  skycol.c  skysol.c  strfn.c  stringP.c  timeP.c  tokens.c  toks.c  treeP.c  vec_base.c  vec_norm.c  vec_serv.c  vectP.c  vvector.c
t3d-mesh-partitioner/contrib/Elixir/: README
t3d-mesh-partitioner/contrib/Elixir/src/: Imakefile  Makefile.hpux  Makefile.in  actset.c  age_cb.c  agecmds.c  akima.c  anntext3d.c  bcbezs3d.c  bcbhex.c  bezier.c  cbezc3d.c  cmds.c  colors.c  command.c  configure  configure.in  create_cb.c  ctlblock.c  dir.c  dither.c  drawl.c  elixir.c  esi.c  exi.c  fonts.c  funky.c  geomops.c  ggroup.c  graphics.c  hexah.c  hexahwd.c  ics.c  isa.c  line3d.c  mark3d.c  markwd3d.c  model.c  move.c  ondisk.c  (+47 more)
t3d-mesh-partitioner/example/quad_tet_block/: README.md  reg-test.sh
t3d-mesh-partitioner/example/quad_tet_block_multithreading/: reg-test.sh
t3d-mesh-partitioner/src/: Makefile  renumber.c  t3d2psifel.c
t3d_scale/: README.md
t3d_scale/docs/: Makefile  Numbering.eps  guide.aux  guide.dvi  guide.ps  guide.tex
t3d_scale/include/: Features.h  boundaryConditions.h  connectivity.h  copy_nodes.h  globalNodes.h  options.h  t3d_element.h  t3d_footer.h  t3d_header.h  t3d_io.h  t3d_node.h  utils.h  writeDistMesh.h
t3d_scale/src/: Features.cpp  Makefile  boundaryConditions.cpp  connectivity.cpp  copy_nodes.cpp  globalNodes.cpp  main.cpp  options.cpp  t3d_element.cpp  t3d_footer.cpp  t3d_header.cpp  t3d_io.cpp  t3d_node.cpp  utils.cpp  writeDistMesh.cpp
(+206 files in other folders)
